--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+ # .github/workflows/main.yml
 name: Main Taski workflow
 
 on:
@@ -7,15 +8,21 @@ on:
 
 jobs:
   tests:
+    # Разворачиваем окружение:
     runs-on: ubuntu-latest
 
     steps:
+    # Копируем код проекта
     - name: Check out code
       uses: actions/checkout@v3
+    # Устанавливаем Python с помощью action
     - name: Set up Python
       uses: actions/setup-python@v4
+    # В action setup-python@v4 передаём параметр — версию Python
       with:
-        python-version:3.9
+        python-version: 3.9
+    # Обновляем pip, устанавливаем flake8 и flake8-isort, 
+    # устанавливаем зависимости проекта
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
