--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,4 +85,4 @@ jobs:
           # Для каждого пересобранного образа 
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
-          tags: ziraelz/taski_backend:latest 
+          tags: zirael2/taski_backend:latest
